--- a/#src/product-page.html
+++ b/#src/product-page.html
@@ -10,8 +10,202 @@
 	<title>Toplash</title>
 </head>
 <body>
-	<div class="feedback main-p-32-16">
+	<header>
+		<div class="rkl p-8 ta-c">
+			<p class="text-extra-small">Save 10% for the first purchase with promocode: TLNEWYEAR2022 </p>
+		</div>
+		<nav class="nav">
+			<div class="container">
+				<div class="nav__body">
+					<div class="nav__logo">
+						<button class="burger">
+							<svg class="w24">
+								<use class="st-not-active" xlink:href="img/sprite/icons-sprite.svg#burger-show"/>
+								<use class="st-active" xlink:href="img/sprite/icons-sprite.svg#close"/>
+							</svg>
+						</button>
+						<img src="img/Toplash-logo.svg" alt="" class="logoImage">
+					</div>
+					<div class="nav__content f-aic">
+						<div class="nav__menu">
+							<a href="">Купить Toplash</a>
+							<a href="">FAQ</a>
+							<a href="">Отзывы</a>
+							<a href="">Профессионалам</a>
+							<a href="">Проверка продукции</a>
+							<a href="" class="btnSec">Войти</a>
+						</div>
+						<a href="" class="btnSec btnCart">
+							<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#bag"/></svg>
+							<span class="ml-8 btnCartText">Корзина</span>
+							<span class="varticalDevider"></span>
+							<span>0</span>
+						</a>
+					</div>
+				</div>
+			</div>
+		</nav>
+	</header>
+	<div class="product">
 		<div class="container">
+			<div class="product__row">
+				<div class="product__col">
+					<div class="slideWhell">
+						<div class="slideWhell__sliderBig">
+							<button class="btnRound sliderBtn btn-prev">
+								<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#arrow"/></svg>
+							</button>
+							<button class="btnRound sliderBtn btn-next">
+								<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#arrow"/></svg>
+							</button>
+							<div class="sliderBig">
+								<div class="sliderBig__item">
+									<img data-lazy="img/other/01.jpg" src="" alt="">
+								</div>
+								<div class="sliderBig__item">
+									<img data-lazy="img/other/02.jpg" src="" alt="">
+								</div>
+								<div class="sliderBig__item">
+									<img data-lazy="img/other/04.jpg" src="" alt="">
+								</div>
+								<div class="sliderBig__item">
+									<img data-lazy="img/other/05.jpg" src="" alt="">
+								</div>
+								<div class="sliderBig__item">
+									<img data-lazy="img/other/06.jpg" src="" alt="">
+								</div>
+								<div class="sliderBig__item">
+									<img data-lazy="img/other/07.jpg" src="" alt="">
+								</div>
+								<div class="sliderBig__item">
+									<img data-lazy="img/other/08.jpg" src="" alt="">
+								</div>
+								<div class="sliderBig__item">
+									<img data-lazy="img/other/10.jpg" src="" alt="">
+								</div>
+								<div class="sliderBig__item">
+									<img data-lazy="img/other/11.jpg" src="" alt="">
+								</div>
+								<div class="sliderBig__item">
+									<img data-lazy="img/other/12.jpg" src="" alt="">
+								</div>
+								<div class="sliderBig__item">
+									<img data-lazy="img/other/13.jpg" src="" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="slideWhell__scrollPreview">
+							<div class="scrollPreview">
+								<div class="scrollPreview__item">
+									<img src="img/other/01.jpg" alt="">
+								</div>
+								<div class="scrollPreview__item">
+									<img src="img/other/02.jpg" alt="">
+								</div>
+								<div class="scrollPreview__item">
+									<img src="img/other/04.jpg" alt="">
+								</div>
+								<div class="scrollPreview__item">
+									<img src="img/other/05.jpg" alt="">
+								</div>
+								<div class="scrollPreview__item active">
+									<img src="img/other/06.jpg" alt="">
+								</div>
+								<div class="scrollPreview__item">
+									<img src="img/other/07.jpg" alt="">
+								</div>
+								<div class="scrollPreview__item">
+									<img src="img/other/08.jpg" alt="">
+								</div>
+								<div class="scrollPreview__item">
+									<img src="img/other/10.jpg" alt="">
+								</div>
+								<div class="scrollPreview__item">
+									<img src="img/other/11.jpg" alt="">
+								</div>
+								<div class="scrollPreview__item">
+									<img src="img/other/12.jpg" alt="">
+								</div>
+								<div class="scrollPreview__item">
+									<img src="img/other/13.jpg" alt="">
+								</div>
+							</div>
+						</div>
+					</div>	
+				</div>
+				<div class="product__col">
+					<div class="product__holder">
+						<div class="product__content nlc-mb-16">
+							<div>
+								<p class="text-huge">Toplash Lash & Brow</p>
+								<p class="text-medium">Средство для роста ресниц и бровей</p>
+							</div>
+							<div class="f-jcsb-aic">
+								<button class="btnSec">
+									<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#play"/></svg>
+									<span>Как пользоваться</span>
+								</button>
+								<div class="f-aic">
+									<div class="js-rating rating" data-path-sprite="img/sprite/icons-sprite.svg" data-rating="5"></div>
+									<p class="ml-16 text-footnote darkGray">1 368 отзывов</p>
+								</div>
+							</div>
+							<p>Toplash – это уникальное средство 2 в 1, созданное на основе инновационных разработок в области регенерации и роста ресниц и бровей. Стимулирует процесс активного роста волосков, увеличивает объем, усиливает пигментацию, а также обеспечивает их восстановление и защиту.</p>
+						</div>
+						<div class="product__content nlc-mb-16 mt-16">
+							<div class="switch">
+								<div class="switch__item">
+									<input type="radio" name="countProduct" id="countProduct-1" class="switch__input">
+									<label for="countProduct-1" class="switch__label">
+										<span class="text-big">1 шт.</span>
+										<span class="text-footnote">Хватит на 3 месяца</span>
+										<span class="text-extra-small">2 290 ₽/шт.</span>
+									</label>
+								</div>
+								<div class="switch__item">
+									<input type="radio" name="countProduct" id="countProduct-2" class="switch__input">
+									<label for="countProduct-2" class="switch__label">
+										<span class="text-big">2 шт.</span>
+										<span class="text-footnote">Хватит на 6 месяцев</span>
+										<span class="discountedItem">
+											<span class="text-footnote mr-4">2 290 ₽</span>
+											<span class="text-extra-small">2 190 ₽/шт.</span>
+										</span>
+									</label>
+								</div>
+								<div class="switch__item">
+									<input type="radio" name="countProduct" id="countProduct-3" class="switch__input">
+									<label for="countProduct-3" class="switch__label">
+										<span class="text-big">3 шт.</span>
+										<span class="text-footnote">Хватит на 9 месяцев</span>
+										<span class="discountedItem">
+											<span class="text-footnote mr-4">2 290 ₽</span>
+											<span class="text-extra-small">2 090 ₽/шт.</span>
+										</span>
+									</label>
+								</div>
+							</div>
+							<button class="btn w-100">
+								<svg class="w24 mr-8"><use xlink:href="img/sprite/icons-sprite.svg#bag"/></svg>
+								<span>В корзину</span>
+							</button>
+							<div class="warranty">
+								<img src="img/sprite/terms-sprite.svg#security" alt="">
+								<div class="warranty__text">
+									<p class="text-medium">Гарантия 90 дней</p>
+									<p>Если за это время вы оказались недовольны результатом, мы вернём все деньги.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="feedback">
+		<div class="container main-p-32-16">
 			<p class="p-16-0 text-huge">Отзывы и обзоры:</p>
 			<div class="feedback__item p-32-0">
 				<div class="feedback__row mb-16">
@@ -20,7 +214,7 @@
 						<p class="feedback__name text-extra-small">Кристина Желяскова</p>
 					</div>
 					<div class="feedback__info">
-						<p class="color-cts mr-16 ws-n">01 апреля 2020</p>
+						<p class="darkGray mr-16 ws-n">01 апреля 2020</p>
 						<div class="js-rating rating" data-path-sprite="img/sprite/icons-sprite.svg" data-rating="5"></div>
 					</div>
 				</div>
@@ -77,7 +271,7 @@
 						<p class="feedback__name text-extra-small">Ольга Димитриченко</p>
 					</div>
 					<div class="feedback__info">
-						<p class="color-cts mr-16 ws-n">22 ноября 2020</p>
+						<p class="darkGray mr-16 ws-n">22 ноября 2020</p>
 						<div class="js-rating rating" data-path-sprite="img/sprite/icons-sprite.svg" data-rating="4"></div>
 					</div>
 				</div>
@@ -117,9 +311,19 @@
 					</div>
 				</div>
 			</div>
+			<div class="pagination-sv f-jcc-aic">
+				<ul class="pagination-sv__list f-jcc-aic">
+					<li class="mob-hide"><a href="">Предыдущая</a></li>
+					<li><a href="">1</a></li>
+					<li class="active"><a href="">2</a></li>
+					<li><a href="">3</a></li>
+					<li><a href="">...</a></li>
+					<li><a href="">999</a></li>
+					<li class="mob-hide"><a href="">Следующая</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
-
 	<div class="terms main-p-32-0">
 		<div class="container">
 			<p class="text-huge p-16">Никаких рисков, только надёжность.</p>
@@ -149,13 +353,13 @@
 		<div class="container">
 			<div class="p-16">
 				<p class="text-huge mb-8">Вам может пригодиться:</p>
-				<p class="color-cts">Чаще всего покупают вместе с Toplash lash and brow</p>
+				<p class="darkGray">Чаще всего покупают вместе с Toplash lash and brow</p>
 			</div>
 			<div class="useful__body">
-				<button class="btnRound btn-prev useful__btn">
+				<button class="btnRound sliderBtn btn-prev">
 					<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#arrow"/></svg>
 				</button>
-				<button class="btnRound btn-next useful__btn">
+				<button class="btnRound sliderBtn btn-next">
 					<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#arrow"/></svg>
 				</button>
 				<div class="useful__row slider">
@@ -169,7 +373,7 @@
 							<div class="p-16 nlc-mb-12 d-flex fdc flex-1">
 								<div class="f-jcsb-aic">
 									<div class="js-rating rating" data-path-sprite="img/sprite/icons-sprite.svg" data-rating="5"></div>
-									<p class="text-footnote color-cts">874 отзывов</p>
+									<p class="text-footnote darkGray">874 отзывов</p>
 								</div>
 								<p class="text-medium">Toplash Extra Ebony Mascara</p>
 								<p class="text-footnote flex-1">Тушь с эффектом удлинения</p>
@@ -194,7 +398,7 @@
 							<div class="p-16 nlc-mb-12 d-flex fdc flex-1">
 								<div class="f-jcsb-aic">
 									<div class="js-rating rating" data-path-sprite="img/sprite/icons-sprite.svg" data-rating="2"></div>
-									<p class="text-footnote color-cts">295 отзывов</p>
+									<p class="text-footnote darkGray">295 отзывов</p>
 								</div>
 								<p class="text-medium">Toplash Eyeliner and Wing Stamp</p>
 								<p class="text-footnote flex-1">Подводка и штамп для стрелок</p>
@@ -223,7 +427,7 @@
 							<div class="p-16 nlc-mb-12 d-flex fdc flex-1">
 								<div class="f-jcsb-aic">
 									<div class="js-rating rating" data-path-sprite="img/sprite/icons-sprite.svg" data-rating="3"></div>
-									<p class="text-footnote color-cts">1 368 отзывов</p>
+									<p class="text-footnote darkGray">1 368 отзывов</p>
 								</div>
 								<p class="text-medium">Toplash Lash Set</p>
 								<p class="text-footnote flex-1">Набор для ухода за ресницами</p>
