--- a/#src/product-page.html
+++ b/#src/product-page.html
@@ -261,7 +261,7 @@
 											<img class="h24" src="img/reviewers/ozon.svg" alt="">
 										</a>
 										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/cart/c-03.png" alt="">
+											<img class="w80" src="img/card/01.png" alt="">
 										</a>	
 									</div>
 								</div>
@@ -294,7 +294,7 @@
 											<img class="h24" src="img/reviewers/WB.svg" alt="">
 										</a>
 										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/cart/c-02.png" alt="">
+											<img class="w80" src="img/card/02.png" alt="">
 										</a>	
 									</div>
 								</div>
@@ -327,7 +327,7 @@
 											<img class="h24" src="img/reviewers/ym.svg" alt="">
 										</a>
 										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/cart/c-03.png" alt="">
+											<img class="w80" src="img/card/03.png" alt="">
 										</a>	
 									</div>
 								</div>
@@ -393,7 +393,7 @@
 											<img class="h24" src="img/reviewers/ir.png" alt="">
 										</a>
 										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/cart/c-02.png" alt="">
+											<img class="w80" src="img/card/02.png" alt="">
 										</a>	
 									</div>
 								</div>
@@ -426,7 +426,7 @@
 											<img class="h24" src="img/reviewers/ozon.svg" alt="">
 										</a>
 										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/cart/c-03.png" alt="">
+											<img class="w80" src="img/card/01.png" alt="">
 										</a>	
 									</div>
 								</div>
@@ -459,7 +459,7 @@
 											<img class="h24" src="img/reviewers/WB.svg" alt="">
 										</a>
 										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/cart/c-02.png" alt="">
+											<img class="w80" src="img/card/02.png" alt="">
 										</a>	
 									</div>
 								</div>
@@ -492,7 +492,7 @@
 											<img class="h24" src="img/reviewers/ym.svg" alt="">
 										</a>
 										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/cart/c-03.png" alt="">
+											<img class="w80" src="img/card/03.png" alt="">
 										</a>	
 									</div>
 								</div>
@@ -525,7 +525,7 @@
 											<img class="h24" src="img/reviewers/ir.png" alt="">
 										</a>
 										<a href="https://ssilka-na-tovar">
-											<img class="w80" src="img/cart/c-01.png" alt="">
+											<img class="w80" src="img/card/03.png" alt="">
 										</a>	
 									</div>
 								</div>
@@ -577,25 +577,25 @@
 				</div>
 			</div>
 		</div>
-		<div class="terms main-p-32-0 isClone">
+		<div class="flexCol3 main-p-32-0 mod-v2">
 			<div class="container">
 				<p class="text-huge p-16">Почему Toplash?</p>
-				<div class="terms__row">
-					<div class="terms__col">
+				<div class="flexCol3__row">
+					<div class="flexCol3__col">
 						<div class="cardTerms v4">
 							<img src="img/sprite/fill-sprite.svg#green-fire" alt="">
 							<p class="text-medium">Натуральный состав</p>
 							<p>Препарат прошёл исследования. Все компоненты абсолютно безопасны и гепоалергенны.</p>
 						</div>
 					</div>
-					<div class="terms__col">
+					<div class="flexCol3__col">
 						<div class="cardTerms v5">
 							<img src="img/sprite/fill-sprite.svg#euro" alt="">
 							<p class="text-medium">Европейское качество</p>
 							<p>Топлаш прошёл все исследования Европейской комиссии и рекомендован к использованию.</p>
 						</div>
 					</div>
-					<div class="terms__col">
+					<div class="flexCol3__col">
 						<div class="cardTerms v6">
 							<img src="img/sprite/fill-sprite.svg#brow" alt="">
 							<p class="text-medium">Альтернатива наращиванию</p>
@@ -687,32 +687,32 @@
 								</td>
 							</tr>
 							<tr>
-								<td class="label brad-tl">Гипоаллергенный состав</td>
+								<td class="brad-tl">Гипоаллергенный состав</td>
 								<td class="bg-red"><svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#ok"/></svg></td>
 								<td class="brad-tr"><svg class="w24 fillDarkGray"><use xlink:href="img/sprite/icons-sprite.svg#no"/></svg></td>
 							</tr>
 							<tr>
-								<td class="label">Природный рост</td>
+								<td>Природный рост</td>
 								<td class="bg-red"><svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#ok"/></svg></td>
 								<td><svg class="w24 fillDarkGray"><use xlink:href="img/sprite/icons-sprite.svg#no"/></svg></td>
 							</tr>
 							<tr>
-								<td class="label">Не гормональная</td>
+								<td>Не гормональная</td>
 								<td class="bg-red"><svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#ok"/></svg></td>
 								<td><svg class="w24 fillDarkGray"><use xlink:href="img/sprite/icons-sprite.svg#no"/></svg></td>
 							</tr>
 							<tr>
-								<td class="label">Долгосрочные результаты</td>
+								<td>Долгосрочные результаты</td>
 								<td class="bg-red"><svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#ok"/></svg></td>
 								<td><svg class="w24 fillDarkGray"><use xlink:href="img/sprite/icons-sprite.svg#no"/></svg></td>
 							</tr>
 							<tr>
-								<td class="label">Безвреден для глаз</td>
+								<td>Безвреден для глаз</td>
 								<td class="bg-red"><svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#ok"/></svg></td>
 								<td><svg class="w24 fillDarkGray"><use xlink:href="img/sprite/icons-sprite.svg#no"/></svg></td>
 							</tr>
 							<tr>
-								<td class="label">Гарантия результата</td>
+								<td>Гарантия результата</td>
 								<td class="bg-red"><svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#ok"/></svg></td>
 								<td><svg class="w24 fillDarkGray"><use xlink:href="img/sprite/icons-sprite.svg#no"/></svg></td>
 							</tr>
@@ -1137,8 +1137,19 @@
 						</div>
 					</div>
 				</div>
-				<div class="pagination-sv f-jcc-aic">
-					<ul class="pagination-sv__list f-jcc-aic">
+				<div class="feedbackSliderControls">
+					<button class="btnRound sliderBtn btn-close js-close-SliderReviews">
+						<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#close"/></svg>
+					</button>
+					<button class="btnRound sliderBtn btn-prev">	
+						<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#arrow"/></svg>
+					</button>
+					<button class="btnRound sliderBtn btn-next">
+						<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#arrow"/></svg>
+					</button>
+				</div>
+				<div class="pagination f-jcc-aic">
+					<ul class="pagination__list f-jcc-aic">
 						<li class="mob-hide"><a href="">Предыдущая</a></li>
 						<li><a href="">1</a></li>
 						<li class="active"><a href="">2</a></li>
@@ -1150,23 +1161,23 @@
 				</div>
 			</div>
 		</div>
-		<div class="terms main-p-32-0">
+		<div class="flexCol3 main-p-32-0">
 			<div class="container">
 				<p class="text-huge p-16">Никаких рисков, только надёжность.</p>
-				<div class="terms__row">
-					<div class="terms__col">
+				<div class="flexCol3__row">
+					<div class="flexCol3__col">
 						<div class="cardTerms v1">
 							<img src="img/sprite/fill-sprite.svg#delivery" alt="">
 							<p class="text-medium">Бесплатная доставка от 2 000 ₽</p>
 						</div>
 					</div>
-					<div class="terms__col">
+					<div class="flexCol3__col">
 						<div class="cardTerms v2">
 							<img src="img/sprite/fill-sprite.svg#revers" alt="">
 							<p class="text-medium">Легкий возврат</p>
 						</div>
 					</div>
-					<div class="terms__col">
+					<div class="flexCol3__col">
 						<div class="cardTerms v3">
 							<img src="img/sprite/fill-sprite.svg#security" alt="">
 							<p class="text-medium">Гарантия 90 дней</p>
@@ -1191,21 +1202,25 @@
 					<div class="useful__row slider">
 						<div class="useful__col">
 							<div class="useful__card">
-								<div class="useful__image">
-									<div class="useful__imageWrap">
-										<img src="img/card/Mascara.jpg" alt="">
+								<a href="https://site.com">
+									<div class="useful__image">
+										<div class="useful__imageWrap">
+											<img src="img/card/Mascara.jpg" alt="">
+										</div>
 									</div>
-								</div>
-								<div class="p-16 nlc-mb-12 d-flex fdc flex-1">
-									<div class="f-jcsb-aic">
-										<div class="js-rating rating" data-rating="5"></div>
-										<p class="text-footnote darkGray">874 отзывов</p>
+									<div class="p-16 nlc-mb-12 d-flex fdc flex-1">
+										<div class="f-jcsb-aic">
+											<div class="js-rating rating" data-rating="5"></div>
+											<p class="text-footnote darkGray">874 отзывов</p>
+										</div>
+										<p class="text-medium">Toplash Extra Ebony Mascara</p>
+										<p class="text-footnote flex-1">Тушь с эффектом удлинения</p>
+										<div class="f-aic">
+											<p class="text-extra-small">890 ₽</p>
+										</div>
 									</div>
-									<p class="text-medium">Toplash Extra Ebony Mascara</p>
-									<p class="text-footnote flex-1">Тушь с эффектом удлинения</p>
-									<div class="f-aic">
-										<p class="text-extra-small">890 ₽</p>
-									</div>
+								</a>
+								<div class="useful__btn p-16">
 									<button class="btn w-100">
 										<svg class="w24 mr-8"><use xlink:href="img/sprite/icons-sprite.svg#bag"/></svg>
 										<span>В корзину</span>
@@ -1215,26 +1230,30 @@
 						</div>
 						<div class="useful__col">
 							<div class="useful__card">
-								<p class="useful__label">Распродажа</p>
-								<div class="useful__image">
-									<div class="useful__imageWrap">
-										<img src="img/card/Eyeliner.jpg" alt="">
-									</div>
-								</div>
-								<div class="p-16 nlc-mb-12 d-flex fdc flex-1">
-									<div class="f-jcsb-aic">
-										<div class="js-rating rating" data-rating="2"></div>
-										<p class="text-footnote darkGray">295 отзывов</p>
-									</div>
-									<p class="text-medium">Toplash Eyeliner and Wing Stamp</p>
-									<p class="text-footnote flex-1">Подводка и штамп для стрелок</p>
-									<div class="f-aic">
-										<div class="oldPrice mr-8">
-											<svg><use xlink:href="img/sprite/icons-sprite.svg#vector"/></svg>
-											<span>750 ₽</span>
+								<p class="useful__label label bg-red">Распродажа</p>
+								<a href="https://site2.com">
+									<div class="useful__image">
+										<div class="useful__imageWrap">
+											<img src="img/card/Eyeliner.jpg" alt="">
 										</div>
-										<p class="text-extra-small">890 ₽</p>
 									</div>
+									<div class="p-16 nlc-mb-12 d-flex fdc flex-1">
+										<div class="f-jcsb-aic">
+											<div class="js-rating rating" data-rating="2"></div>
+											<p class="text-footnote darkGray">295 отзывов</p>
+										</div>
+										<p class="text-medium">Toplash Eyeliner and Wing Stamp</p>
+										<p class="text-footnote flex-1">Подводка и штамп для стрелок</p>
+										<div class="f-aic">
+											<div class="oldPrice mr-8">
+												<svg><use xlink:href="img/sprite/icons-sprite.svg#vector"/></svg>
+												<span>750 ₽</span>
+											</div>
+											<p class="text-extra-small">890 ₽</p>
+										</div>
+									</div>
+								</a>
+								<div class="useful__btn p-16">
 									<button class="btn w-100">
 										<svg class="w24 mr-8"><use xlink:href="img/sprite/icons-sprite.svg#bag"/></svg>
 										<span>В корзину</span>
@@ -1244,26 +1263,30 @@
 						</div>
 						<div class="useful__col">
 							<div class="useful__card">
-								<p class="useful__label v2">Набор</p>
-								<div class="useful__image">
-									<div class="useful__imageWrap">
-										<img src="img/set/03.jpg" alt="">
-									</div>
-								</div>
-								<div class="p-16 nlc-mb-12 d-flex fdc flex-1">
-									<div class="f-jcsb-aic">
-										<div class="js-rating rating" data-rating="3"></div>
-										<p class="text-footnote darkGray">1 368 отзывов</p>
-									</div>
-									<p class="text-medium">Toplash Lash Set</p>
-									<p class="text-footnote flex-1">Набор для ухода за ресницами</p>
-									<div class="f-aic">
-										<div class="oldPrice mr-8">
-											<svg><use xlink:href="img/sprite/icons-sprite.svg#vector"/></svg>
-											<span>750 ₽</span>
+								<p class="useful__label label">Набор</p>
+								<a href="https://site3.com">
+									<div class="useful__image">
+										<div class="useful__imageWrap">
+											<img src="img/set/03.jpg" alt="">
 										</div>
-										<p class="text-extra-small">890 ₽</p>
 									</div>
+									<div class="p-16 nlc-mb-12 d-flex fdc flex-1">
+										<div class="f-jcsb-aic">
+											<div class="js-rating rating" data-rating="3"></div>
+											<p class="text-footnote darkGray">1 368 отзывов</p>
+										</div>
+										<p class="text-medium">Toplash Lash Set</p>
+										<p class="text-footnote flex-1">Набор для ухода за ресницами</p>
+										<div class="f-aic">
+											<div class="oldPrice mr-8">
+												<svg><use xlink:href="img/sprite/icons-sprite.svg#vector"/></svg>
+												<span>750 ₽</span>
+											</div>
+											<p class="text-extra-small">890 ₽</p>
+										</div>
+									</div>
+								</a>
+								<div class="useful__btn p-16">
 									<button class="btn w-100">
 										<svg class="w24 mr-8"><use xlink:href="img/sprite/icons-sprite.svg#bag"/></svg>
 										<span>В корзину</span>
