--- a/#src/product-page.html
+++ b/#src/product-page.html
@@ -177,7 +177,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="reviews main-pb-64">
+	<div class="main-pb-64">
 		<div class="container main-p-32-8">
 			<div class="p-8">
 				<p class="text-huge mb-8">Отзывы реальных девочек.</p>
@@ -242,7 +242,7 @@
 											<span>К</span>
 											<img src="img/people/03.jpg" alt="">
 										</div>
-										<div class="text-footnote">
+										<div class="text-footnote mr-4">
 											<p class="mb-4">Кристина Боломон</p>
 											<p class="darkGray">01 апреля 2020</p>
 										</div>
@@ -256,7 +256,7 @@
 										</div>
 									</div>
 									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="f-jcsb-aic">
+									<div class="cardReviews__footer f-jcsb-aic">
 										<a href="https://ssilka-na-sait-s-otzivami">
 											<img class="h24" src="img/reviewers/ozon.svg" alt="">
 										</a>
@@ -275,7 +275,7 @@
 											<span>М</span>
 											<img src="img/people/01.jpg" alt="">
 										</div>
-										<div class="text-footnote">
+										<div class="text-footnote mr-4">
 											<p class="mb-4">Мирослава Курильская</p>
 											<p class="darkGray">22 мая 2021</p>
 										</div>
@@ -289,7 +289,7 @@
 										</div>
 									</div>
 									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="f-jcsb-aic">
+									<div class="cardReviews__footer f-jcsb-aic">
 										<a href="https://ssilka-na-sait-s-otzivami">
 											<img class="h24" src="img/reviewers/WB.svg" alt="">
 										</a>
@@ -308,8 +308,8 @@
 											<span>А</span>
 											<!-- <img src="img/people/03.jpg" alt=""> -->
 										</div>
-										<div class="text-footnote">
-											<p class="mb-4">Ана Хук</p>
+										<div class="text-footnote mr-4">
+											<p class="mb-4">Анна Хук</p>
 											<p class="darkGray">18 июля 2021</p>
 										</div>
 									</div>
@@ -322,7 +322,7 @@
 										</div>
 									</div>
 									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="f-jcsb-aic">
+									<div class="cardReviews__footer f-jcsb-aic">
 										<a href="https://ssilka-na-sait-s-otzivami">
 											<img class="h24" src="img/reviewers/ym.svg" alt="">
 										</a>
@@ -341,7 +341,7 @@
 											<span>А</span>
 											<!-- <img src="img/people/03.jpg" alt=""> -->
 										</div>
-										<div class="text-footnote">
+										<div class="text-footnote mr-4">
 											<p class="mb-4">Анаcтасия Кухаренко</p>
 											<p class="darkGray">07 сентября 2020</p>
 										</div>
@@ -355,7 +355,7 @@
 										</div>
 									</div>
 									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="f-jcsb-aic">
+									<div class="cardReviews__footer f-jcsb-aic">
 										<a href="https://ssilka-na-sait-s-otzivami">
 											<img class="h24" src="img/reviewers/ir.png" alt="">
 										</a>
@@ -374,7 +374,7 @@
 											<span>Н</span>
 											<!-- <img src="img/people/03.jpg" alt=""> -->
 										</div>
-										<div class="text-footnote">
+										<div class="text-footnote mr-4">
 											<p class="mb-4">Николетта</p>
 											<p class="darkGray">15 сентября 2019</p>
 										</div>
@@ -388,7 +388,7 @@
 										</div>
 									</div>
 									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="f-jcsb-aic">
+									<div class="cardReviews__footer f-jcsb-aic">
 										<a href="https://ssilka-na-sait-s-otzivami">
 											<img class="h24" src="img/reviewers/ir.png" alt="">
 										</a>
@@ -407,7 +407,7 @@
 											<span>К</span>
 											<img src="img/people/03.jpg" alt="">
 										</div>
-										<div class="text-footnote">
+										<div class="text-footnote mr-4">
 											<p class="mb-4">Кристина Боломон</p>
 											<p class="darkGray">01 апреля 2020</p>
 										</div>
@@ -421,7 +421,7 @@
 										</div>
 									</div>
 									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="f-jcsb-aic">
+									<div class="cardReviews__footer f-jcsb-aic">
 										<a href="https://ssilka-na-sait-s-otzivami">
 											<img class="h24" src="img/reviewers/ozon.svg" alt="">
 										</a>
@@ -440,7 +440,7 @@
 											<span>М</span>
 											<img src="img/people/01.jpg" alt="">
 										</div>
-										<div class="text-footnote">
+										<div class="text-footnote mr-4">
 											<p class="mb-4">Мирослава Курильская</p>
 											<p class="darkGray">22 мая 2021</p>
 										</div>
@@ -454,7 +454,7 @@
 										</div>
 									</div>
 									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="f-jcsb-aic">
+									<div class="cardReviews__footer f-jcsb-aic">
 										<a href="https://ssilka-na-sait-s-otzivami">
 											<img class="h24" src="img/reviewers/WB.svg" alt="">
 										</a>
@@ -473,7 +473,7 @@
 											<span>А</span>
 											<!-- <img src="img/people/03.jpg" alt=""> -->
 										</div>
-										<div class="text-footnote">
+										<div class="text-footnote mr-4">
 											<p class="mb-4">Ана Хук</p>
 											<p class="darkGray">18 июля 2021</p>
 										</div>
@@ -487,7 +487,7 @@
 										</div>
 									</div>
 									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="f-jcsb-aic">
+									<div class="cardReviews__footer f-jcsb-aic">
 										<a href="https://ssilka-na-sait-s-otzivami">
 											<img class="h24" src="img/reviewers/ym.svg" alt="">
 										</a>
@@ -506,7 +506,7 @@
 											<span>М</span>
 											<!-- <img src="img/people/03.jpg" alt=""> -->
 										</div>
-										<div class="text-footnote">
+										<div class="text-footnote mr-4">
 											<p class="mb-4">Марина Таскова</p>
 											<p class="darkGray">07 сентября 2020</p>
 										</div>
@@ -520,7 +520,7 @@
 										</div>
 									</div>
 									<button class="cardReviews__button"><span class="show-more">Показать больше...</span><span class="show-less">Показать меньше...</span></button>
-									<div class="f-jcsb-aic">
+									<div class="cardReviews__footer f-jcsb-aic">
 										<a href="https://ssilka-na-sait-s-otzivami">
 											<img class="h24" src="img/reviewers/ir.png" alt="">
 										</a>
@@ -1199,7 +1199,7 @@
 					<button class="btnRound sliderBtn btn-next">
 						<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#arrow"/></svg>
 					</button>
-					<div class="useful__row slider">
+					<div class="useful__row js-slider-useful slider-style-default">
 						<div class="useful__col">
 							<div class="useful__card">
 								<a href="https://site.com">
@@ -1208,7 +1208,7 @@
 											<img src="img/card/Mascara.jpg" alt="">
 										</div>
 									</div>
-									<div class="p-16 nlc-mb-12 d-flex fdc flex-1">
+									<div class="useful__text nlc-mb-12 d-flex fdc flex-1">
 										<div class="f-jcsb-aic">
 											<div class="js-rating rating" data-rating="5"></div>
 											<p class="text-footnote darkGray">874 отзывов</p>
@@ -1220,7 +1220,7 @@
 										</div>
 									</div>
 								</a>
-								<div class="useful__btn p-16">
+								<div class="useful__btn">
 									<button class="btn w-100">
 										<svg class="w24 mr-8"><use xlink:href="img/sprite/icons-sprite.svg#bag"/></svg>
 										<span>В корзину</span>
@@ -1230,14 +1230,14 @@
 						</div>
 						<div class="useful__col">
 							<div class="useful__card">
-								<p class="useful__label label bg-red">Распродажа</p>
+								<p class="useful__label label label_red">Распродажа</p>
 								<a href="https://site2.com">
 									<div class="useful__image">
 										<div class="useful__imageWrap">
 											<img src="img/card/Eyeliner.jpg" alt="">
 										</div>
 									</div>
-									<div class="p-16 nlc-mb-12 d-flex fdc flex-1">
+									<div class="useful__text nlc-mb-12 d-flex fdc flex-1">
 										<div class="f-jcsb-aic">
 											<div class="js-rating rating" data-rating="2"></div>
 											<p class="text-footnote darkGray">295 отзывов</p>
@@ -1253,7 +1253,7 @@
 										</div>
 									</div>
 								</a>
-								<div class="useful__btn p-16">
+								<div class="useful__btn">
 									<button class="btn w-100">
 										<svg class="w24 mr-8"><use xlink:href="img/sprite/icons-sprite.svg#bag"/></svg>
 										<span>В корзину</span>
@@ -1270,7 +1270,7 @@
 											<img src="img/set/03.jpg" alt="">
 										</div>
 									</div>
-									<div class="p-16 nlc-mb-12 d-flex fdc flex-1">
+									<div class="useful__text nlc-mb-12 d-flex fdc flex-1">
 										<div class="f-jcsb-aic">
 											<div class="js-rating rating" data-rating="3"></div>
 											<p class="text-footnote darkGray">1 368 отзывов</p>
@@ -1286,11 +1286,11 @@
 										</div>
 									</div>
 								</a>
-								<div class="useful__btn p-16">
-									<button class="btn w-100">
+								<div class="useful__btn">
+									<a class="btn w-100" href="https://fiss.com">
 										<svg class="w24 mr-8"><use xlink:href="img/sprite/icons-sprite.svg#bag"/></svg>
 										<span>В корзину</span>
-									</button>
+									</a>
 								</div>
 							</div>
 						</div>
