--- a/#src/registration.html
+++ b/#src/registration.html
@@ -19,7 +19,7 @@
 			<p class="darkGray text-medium">Войдите если у вас уже есть аккаунт, или зарегистрируйтесь, если вы новый пользователь</p>
 		</div>
 		<div class="f-jcc-aic">
-			<form class="auth__body card-v1 nlc-mb-32 js-validation-form" action="" method="post">
+			<form class="auth__body card-v1 mod-md-p-16 nlc-mb-32 js-validation-form" action="" method="post">
 				<div class="d-flex">
 					<a href="login.html" class="btn-2 btn-2_gray mr-16">Вход</a>
 					<a href="registration.html" class="btn-2">Регистрация</a>
