--- a/#src/blog-item.html
+++ b/#src/blog-item.html
@@ -116,20 +116,20 @@
 	<div class="container mb-16">
 		<div class="p-16"><hr></div>
 		<p class="p-16 text-huge">Похожие новости</p>
-		<div class="flexCol3__row">
-			<div class="flexCol3__col">
+		<div class="d-flex-w">
+			<div class="col-3 p-16">
 				<a href="" class="cardImage">
 					<img src="img/other/10.jpg" alt="">
 					<p class="text-medium p-16">Результаты за 21 день</p>
 				</a>
 			</div>
-			<div class="flexCol3__col">
+			<div class="col-3 p-16">
 				<a href="" class="cardImage">
 					<img src="img/other/044.jpg" alt="">
 					<p class="text-medium p-16">Корень женьшеня</p>
 				</a>
 			</div>
-			<div class="flexCol3__col">
+			<div class="col-3 p-16">
 				<a href="" class="cardImage">
 					<img src="img/other/011.jpg" alt="">
 					<p class="text-medium p-16">Как наносить</p>
