--- a/#src/blog.html
+++ b/#src/blog.html
@@ -32,20 +32,20 @@
 				</a>
 			</div>
 		</div>
-		<div class="flexCol3__row">
-			<div class="flexCol3__col">
+		<div class="d-flex-w">
+			<div class="col-3 p-16">
 				<a href="" class="cardImage">
 					<img src="img/other/bg-header.jpg" alt="">
 					<p class="text-medium p-16">Как правильно ухаживать за ресницами после наращивания?</p>
 				</a>
 			</div>
-			<div class="flexCol3__col">
+			<div class="col-3 p-16">
 				<a href="" class="cardImage">
 					<img src="img/other/087.jpg" alt="">
 					<p class="text-medium p-16">Длинные ресницы и густые брови — за 21 день без наращивания</p>
 				</a>
 			</div>
-			<div class="flexCol3__col">
+			<div class="col-3 p-16">
 				<a href="" class="cardImage">
 					<img src="img/other/b-01.jpg" alt="">
 					<p class="text-medium p-16">Длинные ресницы и густые брови — за 21 день без наращивания</p>
@@ -66,20 +66,20 @@
 				</a>
 			</div>
 		</div>
-		<div class="flexCol3__row">
-			<div class="flexCol3__col">
+		<div class="d-flex-w">
+			<div class="col-3 p-16">
 				<a href="" class="cardImage">
 					<img src="img/other/10.jpg" alt="">
 					<p class="text-medium p-16">Результаты за 21 день</p>
 				</a>
 			</div>
-			<div class="flexCol3__col">
+			<div class="col-3 p-16">
 				<a href="" class="cardImage">
 					<img src="img/other/044.jpg" alt="">
 					<p class="text-medium p-16">Корень женьшеня</p>
 				</a>
 			</div>
-			<div class="flexCol3__col">
+			<div class="col-3 p-16">
 				<a href="" class="cardImage">
 					<img src="img/other/011.jpg" alt="">
 					<p class="text-medium p-16">Как наносить</p>
