--- a/#src/shipping-and-payment.html
+++ b/#src/shipping-and-payment.html
@@ -42,23 +42,23 @@
 		</div>
 	</div>
 	<div class="main-p-32-0 container">
-		<div class="flexCol3 p-16-0">
+		<div class="p-16-0">
 			<div class="container">
 				<p class="text-huge p-16">Способы оплаты</p>
-				<div class="flexCol3__row">
-					<div class="flexCol3__col">
+				<div class="d-flex-w">
+					<div class="col-3 p-16">
 						<div class="card-v1 nlc-mb-8">
 							<p class="text-medium">Наличный расчёт</p>
 							<p class="darkGray">Возможен при выборе курьерской доставки, на пункте самовывоза, а также на пунктах выдачи Pickpoint.</p>
 						</div>
 					</div>
-					<div class="flexCol3__col">
+					<div class="col-3 p-16">
 						<div class="card-v1 nlc-mb-8">
 							<p class="text-medium">Наложенный платёж</p>
 							<p class="darkGray">Расчет происходит при получении на пункте выдачи Почты России.</p>
 						</div>
 					</div>
-					<div class="flexCol3__col">
+					<div class="col-3 p-16">
 						<div class="card-v1 nlc-mb-8">
 							<p class="text-medium">Кредитной картой</p>
 							<p class="darkGray">Электронные платежи через сервисы Robocassa, гарантирующий защиту ваших персональных данных.</p>
@@ -70,10 +70,10 @@
 		<div class="p-16-0 container">
 			<p class="p-16 text-huge">Способы доставки</p>
 			<div class="deliveryMethods">
-				<a href="#part1" class="btn-2 btn-2_gray">Курьером</a>
-				<a href="#part2" class="btn-2 btn-2_gray">Самовывоз</a>
-				<a href="#part3" class="btn-2 btn-2_gray">Постамат</a>
-				<a href="#part4" class="btn-2 btn-2_gray">Почта России</a>
+				<a href="#part1" class="btn-2">Курьером</a>
+				<a href="#part2" class="btn-2">Самовывоз</a>
+				<a href="#part3" class="btn-2">Постамат</a>
+				<a href="#part4" class="btn-2">Почта России</a>
 			</div>
 			<div class="d-flex md3-fww flexMod-1">
 				<div class="flexMod-1__colMin md3-colMax p-16" id="part1">
