--- a/#src/product-page.html
+++ b/#src/product-page.html
@@ -231,7 +231,7 @@
 					<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#arrow"/></svg>
 				</button>
 			</div>
-			<div class="scroll" data-scroll-id="2">
+			<div class="scroll responsive" data-scroll-id="2">
 				<div class="scroll__body">
 					<ul class="scroll__scroll">
 						<li class="scroll__item">
